--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          no-cache: true
           file: ./Dockerfile
           push: true
           tags: dovej/ditto:latest
